Add sharing button

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -477,20 +477,24 @@ details:not([open]) > *:not(summary) {
   display: none !important;
 }
 
-.attribut {
+.attribut,
+.share {
   position: relative;
 }
 
-.attribut .title {
+.attribut .title,
+.share .title {
   position: absolute;
   top: 20px;
   background: white;
-  border: 1px solid black;
+  border: 1px solid #333;
+  color: #333;
   padding: 4px 6px;
   left: 0;
   white-space: nowrap;
   user-select: none;
   pointer-events: none;
+  z-index: 999;
 }
 
 .leaflet-control-emptyIndicator {
