Add share button

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -333,10 +333,7 @@ summary:focus {
   display: block;
 }
 
-.edit,
-.note,
-.about,
-.donate {
+button.menu {
   right: 10px;
   bottom: 25px;
   -webkit-border-radius: 50%;
@@ -351,17 +348,21 @@ summary:focus {
   position: fixed;
   z-index: 1000;
 }
-.donate {
+button.menu.donate {
   bottom: 25px;
 }
-.about {
+button.menu.about {
   bottom: 60px;
 }
-.edit {
+button.menu.share {
   bottom: 95px;
+  z-index: 1001;
 }
-.note {
+button.menu.edit {
   bottom: 130px;
+}
+button.menu.note {
+  bottom: 165px;
 }
 
 button {
@@ -483,7 +484,8 @@ details:not([open]) > *:not(summary) {
 }
 
 .attribut .title,
-.share .title {
+.share .title,
+button.menu .title {
   position: absolute;
   top: 20px;
   background: white;
@@ -494,7 +496,11 @@ details:not([open]) > *:not(summary) {
   white-space: nowrap;
   user-select: none;
   pointer-events: none;
-  z-index: 999;
+  z-index: 1100;
+}
+button.menu .title {
+  right: 0;
+  left: auto;
 }
 
 .leaflet-control-emptyIndicator {
