--- a/src/www/style.css
+++ b/src/www/style.css
@@ -204,6 +204,10 @@ button {
   display: inline-block;
 }
 
+#filters a {
+  padding-right: 1px;
+}
+
 #filters .filter i {
   height: 14px;
 }
@@ -259,7 +263,7 @@ button {
 #filters .filter .filter-label {
   z-index: -1;
   padding: 6px;
-  padding-left: 5px;
+  padding-left: 1px;
   margin-left: 5px;
 }
 
