--- a/src/www/style.css
+++ b/src/www/style.css
@@ -568,6 +568,27 @@ button.menu .title {
   left: auto;
 }
 
+.help .help-text:after {
+  content: attr(title);
+  display: block;
+  position: absolute;
+  right: 36px;
+  top: 7px;
+  white-space: nowrap;
+  user-select: none;
+  pointer-events: none;
+
+  animation: fade 0.5s ease-in-out 2.5s backwards;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .leaflet-marker-icon {
   animation: pin-down 0.4s ease-in-out;
 }
