--- a/style.css
+++ b/style.css
@@ -578,7 +578,7 @@ button.menu .title {
   user-select: none;
   pointer-events: none;
 
-  animation: fade 0.5s ease-in-out 2.5s backwards;
+  animation: fade 0.5s ease-in-out backwards;
 }
 @keyframes fade {
   0% {
