--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 /**
  * Copyright (C) 2020 Markus Peloso
- * 
+ *
  * This file is part of Sustainable map.
- * 
+ *
  * Sustainable map is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
  * published by the Free Software Foundation, either version 3 of the
  * License, or (at your option) any later version.
- * 
+ *
  * Sustainable map is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Affero General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Affero General Public License
  * along with Sustainable map.  If not, see <http://www.gnu.org/licenses/>.
  */
@@ -609,6 +609,7 @@ button.menu .title {
 }
 
 .leaflet-marker-icon {
+  z-index: 10000 !important;
   animation: pin-down 0.4s ease-in-out;
 }
 @keyframes pin-down {
