--- a/src/style.less
+++ b/src/style.less
@@ -409,13 +409,6 @@ a.menu {
   &.note {
     bottom: 165px;
   }
-
-  i {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
 }
 
 .attribut {
@@ -495,6 +488,16 @@ button {
   outline: none;
   position: relative;
   text-align: center;
+}
+
+button,
+a {
+  i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .close-button:hover {
@@ -696,9 +699,8 @@ a.menu .title {
     input[type="image"] {
       filter: invert(100%) hue-rotate(-180deg);
     }
-
   }
-  
+
   #filters .filter:hover {
     background-color: rgb(229, 229, 229);
   }
