--- a/src/www/_layouts/default.html
+++ b/src/www/_layouts/default.html
@@ -60,16 +60,10 @@
     <meta name="msapplication-config" content="/icons/browserconfig.xml" />
 
     <link
-      rel="preload"
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      type="text/css"
     />
-    <noscript
-      ><link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    /></noscript>
     <link
       rel="stylesheet"
       href="{{
