--- a/src/www/_layouts/default.html
+++ b/src/www/_layouts/default.html
@@ -62,7 +62,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-      type="text/css"
+      media="print"
+      onload="this.media='all'; this.onload=null;"
     />
     <link
       rel="stylesheet"
