--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,9 @@
         }
       }
     </style>
+
+    <meta name="monetization" content="$ilp.uphold.com/BwpBDr48YqPi" />
+
     <script src="/serviceWorkerRegister.js"></script>
   </head>
   <body>
