--- a/src/www/_layouts/default.html
+++ b/src/www/_layouts/default.html
@@ -81,7 +81,7 @@
       padding-left: 10px;
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+li {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li {
       position: absolute;
       top: 0px;
       line-height: 29px;
@@ -94,15 +94,15 @@
       animation-play-state: paused
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+li:nth-child(4) {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(4) {
       animation-delay: -2s;
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+li:nth-child(3) {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(3) {
       animation-delay: -4s;
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+li:nth-child(2) {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(2) {
       animation-delay: -6s;
     }
 
