--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,16 +68,11 @@
       }
     }
 
-    .news {
-      width: 350px;
-      height: 32px;
-      overflow: hidden;
-      border: solid 1px green;
-      position: relative;
-    }
-
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul {
-      width: 350px;
+      height: 32px;
+      position: relative;
+      overflow: hidden;
+      width: 100%;
       padding-left: 10px;
     }
 
@@ -86,24 +81,43 @@
       top: 0px;
       line-height: 29px;
       list-style: none;
-      font-size: 10pt;
-      animation: ticker 8s infinite linear;
+      animation: ticker 45s infinite linear;
     }
 
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul:hover {
       animation-play-state: paused
     }
 
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(9) {
+      animation-delay: -5s;
+    }
+
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(8) {
+      animation-delay: -10s;
+    }
+
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(7) {
+      animation-delay: -15s;
+    }
+
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(6) {
+      animation-delay: -20s;
+    }
+
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(5) {
+      animation-delay: -25s;
+    }
+
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(4) {
-      animation-delay: -2s;
+      animation-delay: -30s;
     }
 
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(3) {
-      animation-delay: -4s;
+      animation-delay: -35s;
     }
 
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(2) {
-      animation-delay: -6s;
+      animation-delay: -40s;
     }
 
     html.theme-mode-dark {
