--- a/src/www/_layouts/default.html
+++ b/src/www/_layouts/default.html
@@ -81,23 +81,27 @@
       top: 0px;
       line-height: 29px;
       list-style: none;
-      animation: ticker 8s infinite linear;
+      animation: ticker 10s infinite linear;
     }
 
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul:hover {
       animation-play-state: paused
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(4) {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(5) {
       animation-delay: -2s;
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(3) {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(4) {
       animation-delay: -4s;
     }
 
-    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(2) {
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(3) {
       animation-delay: -6s;
+    }
+
+    #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(2) {
+      animation-delay: -8s;
     }
 
     html.theme-mode-dark {
