--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
           | relative_url
       }}" />
   <style>
-    @keyframes ticker {
+    /* @keyframes ticker {
       0% {
         transform: translateY(100%);
       }
@@ -102,7 +102,7 @@
 
     #motivierende-sätze-zum-erhalt-unserer-lebensgrundlage+ul li:nth-child(2) {
       animation-delay: -8s;
-    }
+    } */
 
     html.theme-mode-dark {
       filter: invert(100%) hue-rotate(180deg);
