--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,7 +23,7 @@
 <head>
   <title>{{ page.title }}</title>
   <meta charset="utf-8" />
-  <link rel="manifest" href="/manifest.{{ page.lang }}.json" />
+  <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="{{ page.description }}" />
 
