--- a/src/osm-app-component/style.scss
+++ b/src/osm-app-component/style.scss
@@ -487,7 +487,8 @@ a.menu {
   }
 }
 
-.info-container {
+.info-container,
+.intro-container {
   position: absolute;
   top: 80px;
   right: 0px;
@@ -511,7 +512,8 @@ a.menu {
   display: none;
 }
 
-#filters.right-collapsed ~ .info-container {
+#filters.right-collapsed ~ .info-container,
+#filters.right-collapsed ~ .intro-container {
   max-width: calc(100% - 56px);
 }
 
@@ -574,6 +576,15 @@ h1 a {
 
 details[open] summary ~ * {
   animation: sweep 0.4s ease-in-out;
+}
+
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  td {
+    padding: 6px 13px;
+    border: 1px solid #dfe2e5;
+  }
 }
 
 @keyframes sweep {
