--- a/src/osm-app-component/style.scss
+++ b/src/osm-app-component/style.scss
@@ -541,6 +541,12 @@ a.menu {
   }
 }
 
+.responsive-table {
+  max-width: 100%;
+  overflow: auto;
+  white-space: nowrap;
+}
+
 .close-button {
   position: absolute;
   top: 10px;
@@ -548,7 +554,7 @@ a.menu {
   padding: 6px;
   border: none;
   text-align: center;
-  font: 16px/14px Tahoma, Verdana, sans-serif;
+  font: 24px/14px Tahoma, Verdana, sans-serif;
   color: #c3c3c3;
   text-decoration: none;
   font-weight: bold;
