--- a/src/osm-app-component/style.scss
+++ b/src/osm-app-component/style.scss
@@ -584,7 +584,7 @@ details[open] summary ~ * {
   animation: sweep 0.4s ease-in-out;
 }
 
-table {
+.intro-container table {
   border-spacing: 0;
   border-collapse: collapse;
   td {
